clearing the Code

--- a/Avax.Core/Avax.Core.csproj
+++ b/Avax.Core/Avax.Core.csproj
@@ -10,6 +10,8 @@
     <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
+    <Compile Remove="Aluno.cs" />
+    <Compile Remove="obj\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -40,6 +42,7 @@
     <None Include="obj\Debug\Sape.Avaliador.Core.csprojResolveAssemblyReference.cache" />
     <None Include="obj\Debug\Sape.Avaliador.Core.dll" />
     <None Include="obj\Debug\Sape.Avaliador.Core.pdb" />
+    <None Remove="obj\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -47,7 +50,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Lex\Lex\Lex.csproj" />
+    <EmbeddedResource Remove="obj\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\lizzie\lizzie\lizzie.csproj" />
     <ProjectReference Include="..\..\NoSqliteX\NoSqliteX\NoSqliteX.csproj" />
   </ItemGroup>
