--- a/kiki/kiki.csproj
+++ b/kiki/kiki.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup> 
+    <Content Include=".github\workflows\nuget.yml" /> 
     <Content Include="obj\project.assets.json" />
   </ItemGroup>
 
