--- a/.github/workflows/nuget_build_package.yml
+++ b/.github/workflows/nuget_build_package.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install dotnet
         uses: actions/setup-dotnet@v1
         with:
-              dotnet-version: 3.1.x
+              dotnet-version: '2.0'
      
       - name: Restore packages
         run: dotnet restore ${{ env.PROJECT_PATH }}
