--- a/kiki/kiki.csproj
+++ b/kiki/kiki.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>kiki</RootNamespace>
     <Company>https://github.com/Xuxunguinho</Company>
     <AssemblyVersion>0.1.1</AssemblyVersion>
