--- a/.github/workflows/nuget_build_package.yml
+++ b/.github/workflows/nuget_build_package.yml
@@ -40,10 +40,11 @@ jobs:
       - name: Build Project
         run: dotnet build ${{ env.PROJECT_PATH }} --no-restore --configuration Release
     
-      - name: Get Version
-        id: get_version
-        uses: battila7/get-version-action@v2
+    
+      -  id: get_version
+         uses: battila7/get-version-action@v2
         
+      -  run: echo ${{ steps.get_version.outputs.version }}
     
       - name: Pack project
         run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build --configuration Release --include-symbols -p:PackageVersion=${{ steps.get_version.outputs.version-without-v }} --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
