--- a/.github/workflows/nuget_build_package.yml
+++ b/.github/workflows/nuget_build_package.yml
@@ -3,7 +3,7 @@
 name: Deploy Nuget Package
 
 env: 
-    PROJECT_PATH: kiki/kiki.csproj
+    PROJECT_PATH: kiki/kiki/kiki.csproj
     PACKAGE_OUTPUT_DIRECTORY: ${{ github.workspace }}\output
     NUGET_SOURCE_URL: https://api.nuget.org/v3/index.json
     
