--- a/.github/workflows/nuget_build_package.yml
+++ b/.github/workflows/nuget_build_package.yml
@@ -6,6 +6,7 @@ env:
     PROJECT_PATH: kiki/kiki.csproj
     PACKAGE_OUTPUT_DIRECTORY: ${{ github.workspace }}\output
     NUGET_SOURCE_URL: https://api.nuget.org/v3/index.json
+    KIKI_VERSION: '0.1.1'
     
 # Controls when the workflow will run
 on:
@@ -47,7 +48,7 @@ jobs:
        
     
       - name: Pack project
-        run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build --configuration Release --include-symbols -p:PackageVersion=${{ 0.1.1 }} --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
+        run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build --configuration Release --include-symbols -p:PackageVersion=${{ env.KIKI_VERSION }} --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
      
       - name: Push package
         run: dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}\*.nupkg -k ${{ secrets.NUGET_AUTH_KEY }} -s ${{ env.NUGET_SOURCE_URL }}
