--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,8 +1,9 @@
 name: .NET
 
 on:
- workflow_run:
-  
+
+  workflow_dispatch:
+   
  
 env:
     PROJECT_PATH: 'kiki/kiki.csproj'
@@ -27,11 +28,11 @@ jobs:
       run: dotnet build --no-restore -c Release -o out
       
     - name: 'Get version'
-      id: version
+      id: kikiversion
       uses: battila7/get-version-action@v2
       
     - name: "create package"
-      run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build -c Release --include-symbols -p:PackageVersion=${{ steps.version.outputs.version-without-v }} -o out
+      run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build -c Release --include-symbols -p:PackageVersion=${{ steps.kikiversion.outputs.version-without-v }} -o out
    
     - name: Test
       run: dotnet test --no-build --verbosity normal
