--- a/kiki/kiki.csproj
+++ b/kiki/kiki.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>kiki</RootNamespace>
     <Company>https://github.com/Xuxunguinho</Company>
     <AssemblyVersion>0.1.6</AssemblyVersion>
     <FileVersion>0.1.6</FileVersion>
     <AssemblyName>kiki</AssemblyName>
     <Product>kiki</Product>
+    <TargetFrameworks>net5.0;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
