--- a/kiki/kiki.csproj
+++ b/kiki/kiki.csproj
@@ -7,7 +7,7 @@
     <FileVersion>0.1.6</FileVersion>
     <AssemblyName>kiki</AssemblyName>
     <Product>kiki</Product>
-    <TargetFrameworks>net45;net5.0</TargetFrameworks>
+    <TargetFrameworks>net5.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
